+ [lang] Chinese Simplified update, thanks to Shanyan Baishui - rimyxp 
+ [lang] Turkish update, thanks to Burak Yavuz
+ rfe #2963310 [interface] Focus TEXTAREA "sql_query" on click on "SQL" link
+ [lang] Uzbek update, thanks to Orzu Samarqandiy
+ rfe #2958013 [import] After import, also list uploaded filename, thanks
  to Pavel Konnikov and Herman van Rink

3.3.2.0 (not yet released)
- patch #2969449 [core] Name for MERGE engine varies depending on the
  MySQL version, thanks to Dieter Adriaenssens - ruleant
- bug #2966078 [browse] Incorrect LIMIT is saved and sticks while browsing
- bug #2967366 [Structure] Some results of Propose table structure are
  shown in hex
- bug #2967565 [insert] UNHEX not selected by default when inserting BINARY
- [navi] Changed link to git repository on main page
- bug #2972232 [menu] Import menu tab not present on main page

3.3.1.0 (2010-03-16)
- bug #2941037 [core] Database structure not sorted by table correctly 
- bug #2948492 [interface] Slide effect masks some fields on search page
- bug #2959746 [interface] Unknown table status: TABLE_TYPE 
- bug #2953050 [export] export VIEW as SQL includes INSERT statement 
- bug #2942032 [core] Cannot detect PmaAbsoluteUri correctly on Windows 
- bug #2961609 [auth] Potential information disclosure at login page
- patch #2961540 [export] Do not export data of MERGE table,
  thanks to Dieter Adriaenssens - ruleant
- bug #2961198 [parser] Querying a table named "data"
- bug #2931429 [structure] Editing long triggers
- bug #2970769 [structure] Incorrect reference to mootools-more.js 

3.3.0.0 (2010-03-07)
+ rfe #2308632 [edit] Use hex for (var)binary fields,
  thanks to Maarten Dieleman - maartendieleman
+ patch #2794819 [navi] Filter for displayed table names,
  thanks to Michael Valushko - dylfin
- bug #2794840 [core] Cannot redeclare pma_tableheader() 
- rfe #2726479 [core] configurable maximal length of URL
+ patch #2724755 [display] Full/partial text links (big T) are back,